# dental-classifier-app

./: .flake8  .gitignore  Makefile  Makefile.config  README.md  main.py  pyproject.toml  viz.py
pages/: 🏋Train.py
scripts/: format.sh  lint.sh
